# go-tchain-sdk

./: .gitignore  .travis.yml  README.md  bif.go  glide.yaml  glideyaml  go-SDK接口说明.md  go.mod  go.sum
abi/: abi.go  abi_test.go  argument.go  doc.go  error.go  event.go  event_test.go  method.go  method_test.go  pack.go  pack_test.go  packing_test.go  reflect.go  reflect_test.go  topics.go  topics_test.go  type.go  type_test.go  unpack.go  unpack_test.go
account/: UTC--172.17.6.51--did-bid-590ed37615bdfefa496224c7  account.go  doc.go  keyManger.go  sign.go  signTranscation.go
common/: bifer-uint.go  (+14 more)
crypto/privacyutils/: .privacyutils.go.swp  CMakeLists.txt  go.mod  privacyutils  privacyutils.go  privacyutils_test.go
crypto/privacyutils/include/: secp256k1.h  secp256k1_recovery.h
crypto/privacyutils/jni/: cn_bubi_Privacy.cpp  cn_bubi_Privacy.h
crypto/privacyutils/jni/privacy-jni/: pom.xml
crypto/privacyutils/jni/privacy-jni/src/main/java/cn/bubi/: Demo.java  Main.java  Privacy.java
crypto/privacyutils/jni/privacy-jni/src/main/java/cn/bubi/protobuf/: Privacy.java
crypto/privacyutils/jni/privacy-jni/src/main/java/cn/bubi/utils/: AesCbc.java  BcTransferReq.java  BcTxTypeEnum.java  BlobDataResp.java  BlockChainManager.java  CreateContractReq.java  SdkErrorCodeEnum.java  SignEntity.java  SubmitTxReq.java
crypto/privacyutils/jni/privacy-jni/src/main/resources/: libbuchain_secp256k1.dylib
crypto/privacyutils/privacy/: bubi_test.py  ct_token.js  privacy.cpp  privacy.hpp  purec_privacy.c  purec_privacy.h
crypto/privacyutils/src/: group_impl.h  secp256k1.c
crypto/privacyutils/src/asm/: .WeDrive
crypto/privacyutils/src/modules/bulletproofs/: main_impl.h
crypto/privacyutils/src/modules/recovery/: main_impl.h
crypto/privacyutils/test/: Makefile  Makefile1  README  aes_tool.hpp  main.cpp
(+346 files in other folders)
